--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 153vh;
 }
 
 .service h1 {
@@ -450,3 +450,179 @@
     }
 }
 
+/* Trous Noirs */
+
+.banner{
+    width: 100%;
+    height: 400vh;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(black-hole-6392523_640.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.banner-1{
+    width: 100%;
+    height: 594vh;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(solar-flare-978_1280.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.wrapper {
+    width: 100%;
+}
+
+
+
+.img-info  {
+    width: 100%;
+}
+
+.img-info h2 {
+    padding: 30px 30px 20px;
+    font-family: arial;
+    font-size: 50px;
+    color: #fff;
+    line-height: 44px;
+}
+
+.img-info p {
+    padding: 0px 30px 20px;
+    font-family: arial;
+    font-size: 16px;
+    color: #fff;
+    line-height: 24px;
+}
+
+.img-hole {
+    width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+    .wrapper {
+        width: 600px;
+        margin: 0 auto;
+    }
+
+    .img-info h2 {
+        padding: 20px 0px 0px;
+    }
+    
+    .img-info p {
+        padding: 20px 0px 0px;
+    }
+
+    .img-me {
+        padding-top: 30px;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    .wrapper {
+        width: 1000px;
+    }
+
+    .img-info {
+        width: 50%;
+        float: right;
+    }
+
+    .img-info h2 {
+        padding: 20px 0px 0px 30px;
+    }
+    
+    .img-info p {
+        padding: 20px 0px 0px 30px;
+    }
+
+    .img-hole {
+        padding-top: 0px;
+        width: 50%;
+        float: left;
+    }
+}
+
+/* Sources */
+
+
+.banner-3{
+    width: 100%;
+    height: 355vh;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(hd-wallpaper-2695569_1920.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.wrapper1 {
+    width: 100%;
+}
+
+
+
+.img-info1  {
+    width: 100%;
+}
+
+.img-info1 h2 {
+    padding: 30px 30px 20px;
+    font-family: arial;
+    font-size: 50px;
+    color: #fff;
+    line-height: 44px;
+}
+
+.img-info1 p {
+    padding: 0px 30px 20px;
+    font-family: arial;
+    font-size: 16px;
+    color: #fff;
+    line-height: 24px;
+}
+
+.img-hole1 {
+    width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+    .wrapper1 {
+        width: 600px;
+        margin: 0 auto;
+    }
+
+    .img-info1 h2 {
+        padding: 20px 0px 0px;
+    }
+    
+    .img-info1 p {
+        padding: 20px 0px 0px;
+    }
+
+    .img-me1 {
+        padding-top: 30px;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    .wrapper1 {
+        width: 1000px;
+    }
+
+    .img-info1 {
+        width: 50%;
+        float: right;
+    }
+
+    .img-info1 h2 {
+        padding: 20px 0px 0px 30px;
+    }
+    
+    .img-info1 p {
+        padding: 20px 0px 0px 30px;
+    }
+
+    .img-hole1 {
+        padding-top: 0px;
+        width: 50%;
+        float: left;
+    }
+}
